--- a/index.html
+++ b/index.html
@@ -173,6 +173,14 @@ button:hover{
     text-decoration: underline;
     color: blue;
 } 
+@media(max-width:500px){
+    .container{
+    width: 90%;
+  
+}
+
+
+}
     </style>
 </head>
 <body>
